fix scroll overflow and top-nav bar

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -18,9 +18,13 @@ html {
   z-index: 100;
 }
 
+li .property-header{
+  color: black;
+}
+
 .property-header{
   text-shadow: 0 0 5px white !important;
-  color: #232838 !important;
+  color: #232838;
 }
 
 .top-nav {
@@ -123,22 +127,6 @@ p {
   color: #232838 !important;
 }
 
-/*.container .favorite-button {
-  padding: 5px;
-  background-color: #F63700;
-  border-radius: 6px;
-  border: 2px dotted #004853;
-}
-
-.container .favorite-button a {
-  color: #A3C4BC;
-  font-weight: bolder;
-}*/
-
-/*img {
-    width:inherit;
-}*/
-
 .property {
     width: 500px;
     height: auto;
@@ -158,10 +146,6 @@ p {
   border-radius: 20px;
   border: 5px solid #232838;
 }
-
-
-/* Kevin's CSS */
-
 
 .ui_avatar {
   width: 3.3em;
@@ -196,12 +180,6 @@ p {
     right: 0;
     bottom: 0;
   }
-/*
-  .container {
-    width:100%;
-    background-color: yellow;
-    ;
-  }*/
 
   .controls{
     margin-top: 16px;
@@ -251,7 +229,7 @@ p {
     visibility: visible !important;
     position: relative;
     text-align: center;
-    height: 100%;
+    height: 90%;
     margin-top: 50px;
     float: right;
     overflow: scroll;
